Add candidate pagination API